--- a/style.css
+++ b/style.css
@@ -3,3 +3,62 @@ body {
   height: 100%;
   margin: 0;
 }
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+.topnavcentered{
+  float: none;
+  position: absolute;
+  
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+#details {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: red;
+}
+
+#details > div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 20px; 
+}
+
+#details > div > h3 {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+#details > div > p {
+  text-align: center;
+  margin: 0;
+}
+
+#details > div > p > a {
+  display: block; 
+  margin-bottom: 10px; 
+}
+
+#featured-property {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh; 
+}
+
+#featured-property > figure {
+  margin-bottom: 20px; 
+}
+
+#featured-property > p {
+  max-width: 800px;
+  margin: 0 auto; 
+}
